Fixed problematic touch zooming on mobile.

--- a/web/styles.css
+++ b/web/styles.css
@@ -7,6 +7,11 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  touch-action: none;
+}
+
+#planetaryMapCanvas {
+  touch-action: none;
 }
 
 #planetaryStreamingMiniMapCanvas {
